poc/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      volumes:
      - name: ashudbvol1 
        hostPath:
          path: /opt/ashudbnew
          type: DirectoryOrCreate 
      containers:
      - image: mysql:8.0
        name: mysql
        volumeMounts:
        - name: ashudbvol1
          mountPath: /var/lib/mysql/ 
        ports:
        - containerPort: 3306
          name: mysql
