poc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-ingress-rule  # here 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx # change here 
  rules:
  - host: ashu.adhocnet.org  # my app domain name 
    http:
      paths:
      - path: /  # change her 
        pathType: Prefix
        backend:
          service:
            name: wordpress # my internal svc name 
            port:
              number: 80 # service port
